# w2t-bkin

./: .gitmodules  README.md  api.md  categories.txt  cspell.json  design.md  notes.md  pyproject.toml  requirements.md  tasks.md
.github/workflows/: publish.yml
configs/: config.toml
data/interim/: .gitignore
docs/: MIGRATION.md  architecture_diagram.mmd  architecture_status.md  design.md  design_dlc_inference.md  dlc_inference_research.md  flowchart1.mmd  mkdocs.yml  phase3_dlc_completion.md  requirements_dlc_inference.md  tasks.md
docs/docs/: changelog.md  cli.md  configuration.md  data-layout.md  developer-guide.md  faq.md  index.md  (+9 more)
examples/: 01_happy_path_end_to_end.py  02_multi_camera_session.py  03_jitter_budget_comparison.py  04_bpod_camera_sync.py  11_ingest_and_verify.py  21_verification_plots.py  22_alignment_plots.py  README.md  STATUS.md  bpod_camera_sync.py  dlc_inference_batch.py  domain_usage.py  figures_usage.py  pipeline_simple.py  pipeline_with_dlc.py  pose_camera_nwb.py  pose_facemap_demo.py  synthetic_usage.py  ttl_from_pose.py
figures/: README.md  __init__.py  events.py  facemap.py  ingest_verify.py  nwb.py  pose.py  session.py  sync.py  synthetic.py  utils.py
notebooks/: example_1.ipynb
scripts/: README.md  mat2json.py  pose2ttl.py
spec/: spec-config-toml.md  spec-session-toml.md
synthetic/: README.md  __init__.py  bpod_synth.py  config_synth.py  facemap_synth.py  models.py  pose_synth.py  session_synth.py  ttl_synth.py  utils.py  video_synth.py
tests/: conftest.py  phase_3_red_summary.md  test_data.py  test_requirements_docs.py
(+172 files in other folders)
