[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "w2t_bkin"
version = "0.0.1"
description = "Mouse wiskers body kinematics and behaviour"
authors = [{ name = "Larkum Lab" }]
license = { text = "Apache-2.0" }

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []
requires-python = "~=3.10.0"

[tool.black]
line-length = 160
include = '\.pyi?$'

[tool.isort]
profile = "black"
known_first_party = ["w2t_bkin"]
force_sort_within_sections = true
